# Dive_Service_Management

./: .dockerignore  .env.example  .gitignore  ARCHIVED_STATIC_PROJECT_REVIEW_2026_03_04.md  CODEX-PROJECT_REVIEW.md  Dockerfile  Dockerfile.test  Dockerfile.test-dev  Dockerfile.uat  GEMINI-PROJECT_REVIEW.md  Makefile  PROGRESS.md  PROJECT_BLUEPRINT.md  README.md  README.plan  STATIC_PROJECT_REVIEW.md  docker-compose.lightweight.yml  docker-compose.override.yml.example  docker-compose.test-dev.yml  docker-compose.test-mariadb.yml  docker-compose.test.yml  docker-compose.uat.yml  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements-uat.txt  requirements.txt
.docker/: .token_seed
.docker/buildx/: .buildNodeID
app/: __init__.py  celery_app.py  config.py  extensions.py
app/blueprints/: __init__.py  admin.py  attachments.py  auth.py  customers.py  dashboard.py  docs.py  export.py  health.py  inventory.py  invoices.py  items.py  lookups.py  notifications.py  orders.py  price_list.py  reports.py  search.py  tools.py
app/cli/: __init__.py  create_admin.py  seed.py  seed_lookups.py  test_email.py
app/forms/: __init__.py  applied_service.py  auth.py  customer.py  (+12 more)
docker/: test-resources.env
docs/: architecture.md  cloud_deployment.md  configuration.md  installation.md  user_guide.md
scripts/: backup.sh  capture_docs_screenshots.py  configure_test_resources.sh  final_wave_gate.sh  generate_secret_key.py  healthcheck.sh  restore.sh  setup.sh  test-compose.sh
tests/: _fixtures.py  conftest.py  factories.py
(+378 files in other folders)
